--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-click==8.1.7
-Flask==2.2.5
-importlib-metadata==6.7.0
-itsdangerous==2.1.2
-Jinja2==3.1.4
-MarkupSafe==2.1.5
-typing_extensions==4.7.1
-Werkzeug==2.2.3
-zipp==3.15.0
+bcrypt==4.3.0
+blinker==1.9.0
+click==8.1.8
+Flask==3.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+PyMySQL==1.1.1
+Werkzeug==3.1.3
